fix row-wrapped pictures

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -280,7 +280,7 @@ body {
 .row-wrap-container.picture-text > .picture-container,
 .row-wrap-container.picture-text > .picture {
     width: min(500px, calc(100vw - 2 * var(--margin-side)));
-    min-width: 500px;
+    flex: auto;
 }
 .row-wrap-container.picture-text > .text-container {
     width: min(500px, calc(100vw - 2 * var(--margin-side)));
